<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GlobalEducation</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="username_hint">Enter Username</string>
    <string name="password_hint">Enter Password</string>
    <string name="login_string">Log In</string>
    <string name="create_acc_string">Create New Child Account</string>
    <string name="account_info_string">Please fill in the following fields to create your free account!</string>
    <string name="new_username_string">Enter Desired Username</string>
    <string name="new_password_string">Enter Desired Password</string>
    <string name="new_password_confirm_string">Confirm Desired Password</string>
    <string name="new_name_string">Enter Student\'s First Name</string>
    <string name="grade_select_text">Select your grade level:</string>
    <string name="cancel_string">Cancel</string>
    <string name="math_string">Go To Daily Question</string>
    <string name="science_string">Science</string>
    <string name="english_string">English</string>
    <string name="history_string">History</string>
    <string name="questions_string">Questions</string>
    <string name="parent_zone_string">Parent Zone</string>
    <string name="submit_string">Submit</string>
    <string name="question_error">Error retrieving question information</string>
    <string name="correct_answer">That\'s right! Good job! :D</string>
    <string name="wrong_answer">Sorry, but that isn\'t right.</string>
    <string name="create_par_acc_string">Create New Parent Account</string>
    <string name="add_child_string">Add Child</string>
    <string name="invalid_username">Username must be at least 6 characters long</string>
    <string name="nonmatching_passwords">The two passwords you entered do not match</string>
    <string name="intended_child_un">Enter Child Username</string>
    <string name="intended_child_pw">Enter Child Password</string>
    <string name="zip_code_string">Enter Zip Code</string>
    <string name="back_string">Go Back</string>
    <string name="parent_check_string">I am a parent</string>
    <string name="select_child_string">Which child would you like to see data for\?</string>
    <string name="parent_view_string">See info relative to\:</string>
    <string name="total_questions_string">Total Questions Answered: </string>
    <string name="percentage_string">Percentage Correct: </string>
    <string name="percentile_string">Child Percentile: </string>
    <string name="statistics_string">Show Statistics</string>

    <string-array name="scope_selector">
        <item>City</item>
        <item>State</item>
        <item>Country</item>
        <item>Global</item>
    </string-array>
    <string-array name="grades">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>

</resources>