<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView android:id="@+id/account_screen_instructions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/account_info_string"/>
    
    <EditText android:id="@+id/new_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_username_string"/>
    
    <EditText android:id="@+id/new_password"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_password_string"/>
    
    <EditText android:id="@+id/new_password_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/new_password_confirm_string"/>
    
    <EditText android:id="@+id/student_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_name_string"/>
    
    <TextView android:id="@+id/grade_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:text="@string/grade_select_text"/>
    
    <NumberPicker android:id="@+id/grade_picker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    
    <Button android:id="@+id/confirm_new_account_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_acc_string"/>
    
    <Button android:id="@+id/cancel_acc_create_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel_string"/>

</LinearLayout>
